--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "boilerplate/header_adjuster.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint boilerplate/header_adjuster.js"
+    "eslint": "eslint boilerplate/header_adjuster.js",
+    "lesshint": "lesshint boilerplate/"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/yumetodo/Hatena-Blog-Themes#readme",
   "devDependencies": {
-    "eslint": "^3.14.1"
+    "eslint": "^3.14.1",
+    "lesshint": "^2.4.0"
   }
 }
