--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Hatena Blog Theme (yumetodo customized)",
   "main": "boilerplate/header_adjuster.js",
   "scripts": {
+    "build": "npm-run-all --parallel build:*",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint boilerplate/header_adjuster.js",
     "lesshint": "lesshint boilerplate/",
     "lint": "npm-run-all --parallel eslint lesshint",
+    "build:less": "lessc --clean-css=\"--s1 --advanced\" boilerplate/boilerplate.less style.min.css"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,8 @@
   "homepage": "https://github.com/yumetodo/Hatena-Blog-Themes#readme",
   "devDependencies": {
     "eslint": "^3.14.1",
+    "less": "^2.7.2",
+    "less-plugin-clean-css": "^1.5.1",
     "lesshint": "^2.4.0",
     "npm-run-all": "^4.0.1"
   }
