--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,7 @@ node_js:
 install:
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
   - export NVM_DIR="$HOME/.nvm"
-  - [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+  - "$NVM_DIR/nvm.sh"
   - nvm install node
   - nvm use node
   - npm update -g npm
