--- a/shippable.yml
+++ b/shippable.yml
@@ -1,12 +1,7 @@
 language: node_js
 node_js:
-  - 4.2.3
+  - "node"
 install:
-  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
-  - export NVM_DIR="$HOME/.nvm"
-  - "$NVM_DIR/nvm.sh"
-  - nvm install node
-  - nvm use node
   - npm update -g npm
 
 build:
