unsafe-perm is required to run closure-compiler-install.js
ref:
http://stackoverflow.com/questions/18136746/npm-install-failed-with-cannot-run-in-wd

--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "lesshint": "^2.4.0",
     "npm-run-all": "^4.0.1",
     "path": "^0.12.7"
+  },
+  "config": {
+    "unsafe-perm":true
   }
 }
