--- a/shippable.yml
+++ b/shippable.yml
@@ -6,6 +6,9 @@ install:
   - java -version
 
 build:
+  cache: true
+  cache_dir_list:
+    - $SHIPPABLE_BUILD_DIR/node_modules
   ci:
     - npm install --unsafe-perm
     - npm run lint
