--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
 		"node": true
     },
 	"x": {"ecmaVersion": 7, "sourceType": "script"},
+	"plugins": ["node"],
 	"rules": {
 		"arrow-parens":                ["warn", "as-needed"],
 		"callback-return":             "off",
@@ -81,6 +82,17 @@
 		"yield-star-spacing":          [
 			"warn", {"before": true, "after": false}
 		],
-		"yoda":                        "off"
+		"yoda":                        "off",
+
+		"node/exports-style":          ["error", "module.exports"],
+		"node/no-deprecated-api":      "error",
+		"node/no-missing-import":      "off",
+		"node/no-missing-require":     "error",
+		"node/no-unpublished-bin":     "off",
+		"node/no-unpublished-import":  "off",
+		"node/no-unpublished-require": "off",
+		"node/no-unsupported-features":"off",
+		"node/process-exit-as-throw":  "error",
+		"node/shebang":                "off"
 	}
 }
