--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "path": "^0.12.7"
   },
   "config": {
-    "unsafe-perm":true
+    "unsafe-perm": true
+  },
+    "engines": {
+      "node": ">=4.0.0"
   }
 }
