--- a/shippable.yml
+++ b/shippable.yml
@@ -11,7 +11,7 @@ build:
     - java -version
     - ls -l /tmp/ssh/
     - echo $BRANCH
-    - ssh-agent bash -c 'ssh-add /tmp/ssh/githubdeploy; git clone git@github.com:yumetodo/Hatena-Blog-Themes.git /dev/shm/Hatena-Blog-Themes'
+    - ssh-agent bash -c 'ssh-add /tmp/ssh/githubdeploy; git clone -b gh-pages git@github.com:yumetodo/Hatena-Blog-Themes.git /dev/shm/Hatena-Blog-Themes'
     - bash -c 'cd /dev/shm/Hatena-Blog-Themes; git status;'
     - npm install --unsafe-perm
     - npm run lint
