--- a/shippable.yml
+++ b/shippable.yml
@@ -16,6 +16,17 @@ build:
     - npm install --unsafe-perm
     - npm run lint
     - npm run build
+  on_success:
+    - cp -r bin /dev/shm/Hatena-Blog-Themes
+    - cd /dev/shm/Hatena-Blog-Themes
+    - pwd
+    - git config user.name "yumetodo"
+    - git config user.email "yume-wikijp@live.jp"
+    - git add .
+    - git commit -m "Deploy minified css/js [skip ci]"
+    - ssh-agent bash -c 'ssh-add /tmp/ssh/githubdeploy; git push'
+    - cd $SHIPPABLE_BUILD_DIR
+    - pwd
 
 notifications:
   email:
