--- a/shippable.yml
+++ b/shippable.yml
@@ -9,24 +9,12 @@ build:
   ci:
     - npm update -g npm
     - java -version
-    - ls -l /tmp/ssh/
-    - echo $BRANCH
-    - ssh-agent bash -c 'ssh-add /tmp/ssh/githubdeploy; git clone -b gh-pages git@github.com:yumetodo/Hatena-Blog-Themes.git /dev/shm/Hatena-Blog-Themes'
-    - bash -c 'cd /dev/shm/Hatena-Blog-Themes; git status;'
     - npm install --unsafe-perm
     - npm run lint
     - npm run build
   on_success:
-    - cp -r bin /dev/shm/Hatena-Blog-Themes
-    - cd /dev/shm/Hatena-Blog-Themes
-    - pwd
-    - git config user.name "yumetodo"
-    - git config user.email "yume-wikijp@live.jp"
-    - git add .
-    - git commit -m "Deploy minified css/js [skip ci]"
-    - ssh-agent bash -c 'ssh-add /tmp/ssh/githubdeploy; git push'
-    - cd $SHIPPABLE_BUILD_DIR
-    - pwd
+    - echo "branch: $BRANCH"
+    - if [ "$BRANCH" == "yumetodo/master" ] ; then ./shippable_deploy.sh; fi
 
 notifications:
   email:
