fix shippable error
Bad YML data in build.on_success. Only strings are allowed

--- a/shippable.yml
+++ b/shippable.yml
@@ -13,7 +13,7 @@ build:
     - npm run lint
     - npm run build
   on_success:
-    - echo "branch: $BRANCH"
+    - echo "branch - ${BRANCH}"
     - if [ "$BRANCH" == "yumetodo/master" ] ; then ./shippable_deploy.sh; fi
 
 notifications:
