A step to fix ci error

--- a/shippable.yml
+++ b/shippable.yml
@@ -14,6 +14,7 @@ build:
     - npm run build
   on_success:
     - echo "branch - ${BRANCH}"
+    - pwd
     - if [ "$BRANCH" == "yumetodo/master" ] ; then ./shippable_deploy.sh; fi
 
 notifications:
