change deploy key

--- a/shippable.yml
+++ b/shippable.yml
@@ -23,5 +23,5 @@ notifications:
 
 integrations:
   key:
-    - integrationName: githubdeploy
+    - integrationName: GithubDeploy
       type: ssh-key
