--- a/shippable.yml
+++ b/shippable.yml
@@ -7,6 +7,7 @@ build:
   cache_dir_list:
     - $SHIPPABLE_BUILD_DIR/node_modules
   ci:
+    - ls -l /tmp/ssh
     - npm update -g npm
     - java -version
     - npm install --unsafe-perm
