--- a/shippable.yml
+++ b/shippable.yml
@@ -24,5 +24,5 @@ notifications:
 
 integrations:
   key:
-    - integrationName: GithubDeploy
+    - integrationName: shippable2githubssh
       type: ssh-key
