--- a/shippable.yml
+++ b/shippable.yml
@@ -3,12 +3,15 @@ node_js:
   - "node"
 
 build:
+  pre_ci_boot:
+    image_name: drydock/u16nodall
+    image_tag: v6.3.4
+    pull: true
   cache: true
   cache_dir_list:
     - $SHIPPABLE_BUILD_DIR/node_modules
   ci:
     - ls -l /tmp/ssh
-    - npm update -g npm
     - java -version
     - npm install --unsafe-perm
     - npm run lint
