--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/yumetodo/Hatena-Blog-Themes#readme",
   "devDependencies": {
-    "download": "^5.0.3",
-    "eslint": "^3.14.1",
-    "eslint-plugin-node": "^3.0.5",
-    "fs-promise": "^1.0.0",
-    "less": "^2.7.2",
+    "download": "^6.2.5",
+    "eslint": "^4.19.1",
+    "eslint-plugin-node": "^6.0.1",
+    "fs-extra": "^5.0.0",
+    "less": "^3.0.1",
     "less-plugin-clean-css": "^1.5.1",
-    "lesshint": "^2.4.0",
-    "npm-run-all": "^4.0.1",
+    "lesshint": "^5.0.0",
+    "npm-run-all": "^4.1.2",
     "path": "^0.12.7"
   },
   "config": {
