--- a/boilerplate/.eslintrc.json
+++ b/boilerplate/.eslintrc.json
@@ -5,7 +5,7 @@
 		"browser": true,
 		"jquery": true
     },
-	"x": {"ecmaVersion": 7, "sourceType": "script"},
+	"parserOptions": {"ecmaVersion": 2016, "sourceType": "script"},
 	"rules": {
 		"arrow-parens":                ["warn", "as-needed"],
 		"callback-return":             "off",
