fix(ci): use default image

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,23 +1,15 @@
 language: node_js
 node_js:
-  - "node"
+  - "10.15.1"
 
 build:
-  pre_ci_boot:
-    image_name: drydock/u16nodall
-    image_tag: v6.3.4
-    pull: true
   cache: true
   cache_dir_list:
     - $SHIPPABLE_BUILD_DIR/node_modules
   ci:
     - ls -l /tmp/ssh
-    - java -version
-    - npm install --unsafe-perm
-    - echo $PATH
-    - echo $JAVA_HOME
     - npm run lint
-    - npm run build
+    # - npm run build
   on_success:
     - echo "branch - ${BRANCH}"
     - echo "IS_PULL_REQUEST - ${IS_PULL_REQUEST}"
