chore(ci): collect info

--- a/shippable.yml
+++ b/shippable.yml
@@ -9,6 +9,7 @@ build:
   ci:
     - ls -l /tmp/ssh
     - npm run lint
+    - ls -la $SHIPPABLE_BUILD_DIR/bin
     # - npm run build
   on_success:
     - echo "branch - ${BRANCH}"
